# qyne-v1

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  docker-compose.yml  setup.sh
services/agno/: Dockerfile  nexus_legacy.py  pyproject.toml
services/agno/agents/: __init__.py  knowledge.py  research.py  support.py
services/agno/agents/competitor/: agents.py
services/agno/agents/content/: agents.py
services/agno/agents/creative/: agents.py
services/agno/agents/deep_research/: agents.py
services/agno/agents/marketing/: agents.py
services/agno/agents/product_dev/: agents.py
services/agno/agents/seo/: agents.py
services/agno/agents/social/: agents.py
services/agno/agents/utility/: agents.py
services/agno/agents/whatsapp_support/: agents.py
services/agno/app/: __init__.py  config.py  main.py  models.py  shared.py
services/agno/evals/: __init__.py  run_evals.py
services/agno/knowledge/: guia-video-profesional.md  masterclass-seo-geo-2026.md  principios-agenticos.md  remotion-templates-referencia.md  topics-seo-geo-aikalabs.md  workflows-produccion-agno.md
services/agno/skills/academic-research/: SKILL.md
services/agno/skills/agent-ops/: SKILL.md
services/agno/skills/agent-ops/references/: context-engineering.md
services/agno/skills/aurora/: SKILL.md
services/agno/skills/aurora/references/: voice-commands.md
services/agno/skills/automation-commands/: automation-playbook.md
services/agno/skills/campaign-analytics/: SKILL.md
services/agno/skills/campaign-analytics/references/: kpis.md  (+1 more)
services/agno/skills/community-research/: SKILL.md
services/agno/skills/competitive-analysis/: SKILL.md
services/agno/skills/content-research/: SKILL.md
services/agno/skills/content-strategy/: SKILL.md
services/agno/skills/copywriting-es/: SKILL.md
services/agno/skills/deep-search/: SKILL.md
services/agno/skills/deep-synthesis/: SKILL.md
services/agno/skills/directus-crm/: SKILL.md
services/agno/skills/docflow/: SKILL.md
services/agno/skills/github-research/: SKILL.md
services/agno/skills/hipaa-compliance/: SKILL.md
services/agno/skills/latam-research/: SKILL.md
services/agno/skills/market-intelligence/: SKILL.md
services/agno/skills/n8n-automation/: n8n-expert.md
services/agno/skills/prompt-patterns/: SKILL.md
services/agno/skills/pwa-troubleshooting/: SKILL.md
services/agno/skills/remotion-video/: SKILL.md
services/agno/skills/seo-geo/: SKILL.md
services/agno/skills/video-hooks/: SKILL.md
services/agno/skills/whabi/: SKILL.md
services/agno/skills/whatsapp-business-api/: SKILL.md
services/agno/teams/: cerebro.py  content_team.py  nexus_master.py
services/agno/tools/: __init__.py  chat_export.py  directus_business.py  directus_pipeline.py  docling_tool.py  prefect_api.py  prefect_trigger.py  sandbox.py
services/agno/workflows/: content_production.py  media_generation.py  research.py  seo_content.py
services/workers/: Dockerfile  pyproject.toml
services/workers/flows/: __init__.py  data_cleanup.py  data_enricher.py  data_sync.py  database_backup.py  dedup_merger.py  email_digest.py  etl_documents.py  export_csv.py  health_check.py  image_downloader.py  import_csv.py  knowledge_indexer.py  lead_scorer.py  property_pipeline.py  property_quality_audit.py  property_scraper.py  register_deployments.py  report_generator.py  scraper_latam.py  selector_health_check.py  sentiment_analyzer.py  website_crawler.py
(+88 files in other folders)
