[project]
name = "qyne-agno"
version = "0.1.0"
description = "QYNE v1 — Agno AgentOS"
requires-python = ">=3.12"

# Same dependencies as the original requirements.txt from the Agno repo,
# plus docker SDK for the sandbox tool.
dependencies = [
    # Core: Agno with AgentOS runtime
    "agno[os]",

    # Storage: SQLite + LanceDB
    "agno[sqlite]",
    "lancedb",
    "pylance",
    "tantivy",

    # Models
    "agno[groq]",
    "agno[openai]",

    # Tools: Free (no API key)
    "agno[arxiv]",
    "agno[ddg]",
    "agno[newspaper]",
    "agno[youtube]",
    "pypdf",
    "praw",
    "yfinance",
    "wikipedia",
    "newspaper4k[nlp]",

    # Tools: Require API keys
    "agno[exa]",
    "agno[github]",
    "agno[slack]",
    "agno[tavily]",
    "agno[todoist]",

    # Tools: Additional integrations
    "tweepy",
    "firecrawl-py",
    "spider-client",
    "browserbase",
    "google-genai",
    "lumaai",

    # MCP protocol
    "agno[mcp]",

    # Knowledge: Voyage AI embeddings
    "voyageai",

    # Knowledge: Docling reader (official Agno v2.5.10)
    "docling",

    # AG-UI protocol
    "ag-ui-protocol",

    # Docker SDK (for sandbox/micro-PC tool)
    "docker",

    # HTTP client (for Directus REST tools)
    "httpx",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
